generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}

model User {
  id        String   @id @default(uuid())
  login     String   @unique
  password  String
  version   Int      @default(1)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Artist {
  id         String      @id @default(uuid())
  name       String
  grammy     Boolean
  albums     Album[]
  tracks     Track[]
  favorites  Favorites[]
}

model Album {
  id         String      @id @default(uuid())
  name       String
  year       Int
  artist     Artist?     @relation(fields: [artistId], references: [id], onDelete: SetNull)
  artistId   String?
  tracks     Track[]
  favorites  Favorites[]
}

model Track {
  id         String      @id @default(uuid())
  name       String
  duration   Int
  artist     Artist?     @relation(fields: [artistId], references: [id], onDelete: SetNull)
  artistId   String?
  album      Album?      @relation(fields: [albumId], references: [id], onDelete: SetNull)
  albumId    String?
  favorites  Favorites[]
}

model Favorites {
  id       String   @id @default(uuid())
  artists  Artist[]
  albums   Album[]
  tracks   Track[]
} 